--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       padding: 12px 0;
     }
     nav a {
-      color: white;
+      color: marmur;
       margin: 0 20px;
       text-decoration: none;
       font-weight: bold;
@@ -135,7 +135,7 @@
   </header>  <nav>
     <a href="#o-mnie">O mnie</a>
     <a href="#uslugi">Usługi</a>
-    <a href="#galeria">Galeria</a>
+    
     <a href="#kontakt">Kontakt</a>
   </nav>  <section id="o-mnie">
     <h2>O mnie</h2>
@@ -159,12 +159,6 @@
       <li>Makijaż permanentny brwi, oczu i ust</li>
       <li>Stylizacja rzęs</li>
     </ul>
-  </section>  <section id="galeria">
-    <h2>Galeria</h2>
-    <div class="gallery">
-      <img src="images/zdjecie1.jpg" alt="Zabieg 1">
-      <img src="images/zdjecie2.jpg" alt="Zabieg 2">
-      <img src="images/zdjecie3.jpg" alt="Wnętrze salonu">
     </div>
   </section>  <section id="kontakt" class="contact">
     <h2>Kontakt</h2>
