--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="pl">
 <head>
+  <img src="BackgroundEraser_20250302_163154391.png.jpg" alt="BackgroundEraser_20250302_163154391.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estetic&PMU Klaudia Dutkiewicz</title>
