--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     }
     footer {
       background-color: #bfa056;
-      color: white;
+      color: marmur;
       text-align: center;
       padding: 25px;
       margin-top: 60px;
@@ -141,7 +141,7 @@
   </nav>  <section id="o-mnie">
     <h2>O mnie</h2>
     <img src="file-VXtMSxoBkzc53vwdW5BGqC" alt="Klaudia Dutkiewicz" class="profile-pic">
-    <p>Nazywam się Klaudia Dutkiewicz. Jestem absolwentką Wyższej Szkoły Medycznej i od ponad 8 lat pracuję jako kosmetolog. Moja praca to pasja, którą realizuję w eleganckim i komfortowym salonie w Kudowie-Zdroju. Zawsze dbam o najwyższe standardy, estetykę i satysfakcję klientek.</p>
+    <p> Klaudia Dutkiewicz właścicielka salonu Estetic&PMU kosmetologii estetyczneji makijażu permanentnego. Absolwentka Wyższej Szkoły Medycznej z ponad 8 letnim doświadczeniem jako kosmetolog.</p>
   </section>  <section id="uslugi" class="services">
     <h2>Zakres usług</h2>
     <ul>
