--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html><html lang="pl">
+<!DOCTYPE html>
+<html lang="pl">
 <head>
-  <img src="BackgroundEraser_20250302_163154391.png.jpg" alt="BackgroundEraser_20250302_163154391.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estetic&PMU Klaudia Dutkiewicz</title>
+
+  <!-- Czcionka nagłówka -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-image: url('https://www.transparenttextures.com/patterns/white-marble.png');
+      background-image: url('https://i.imgur.com/JcNs0Mz.jpg'); /* złoty marmur */
+      background-size: cover;
+      background-attachment: fixed;
       background-color: #fff;
       color: #3a3a3a;
       scroll-behavior: smooth;
     }
+
     header {
       background-color: rgba(255, 255, 255, 0.95);
       text-align: center;
@@ -20,27 +27,34 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       animation: fadeIn 1.2s ease-in-out;
     }
+
     header h1 {
-      font-size: 2.8rem;
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
       color: #bfa056;
       margin-bottom: 10px;
+      letter-spacing: 1px;
     }
+
     nav {
       background-color: #bfa056;
       text-align: center;
       padding: 12px 0;
     }
+
     nav a {
-      color: marmur;
+      color: white;
       margin: 0 20px;
       text-decoration: none;
       font-weight: bold;
       font-size: 1rem;
       transition: color 0.3s;
     }
+
     nav a:hover {
       color: #333;
     }
+
     section {
       padding: 60px 20px;
       max-width: 1100px;
@@ -51,33 +65,40 @@
       margin-top: 40px;
       animation: slideUp 1s ease-in-out;
     }
+
     h2 {
       color: #bfa056;
       margin-bottom: 25px;
     }
+
     .services ul {
       list-style: none;
       padding: 0;
       columns: 2;
     }
+
     .services li {
       margin-bottom: 10px;
       transition: transform 0.3s;
     }
+
     .services li:hover {
       transform: translateX(8px);
     }
+
     .contact p {
       line-height: 1.8;
     }
+
     footer {
       background-color: #bfa056;
-      color: marmur;
+      color: white;
       text-align: center;
       padding: 25px;
       margin-top: 60px;
       animation: fadeIn 2s ease-in-out;
     }
+
     .profile-pic {
       display: block;
       margin: 20px auto;
@@ -86,9 +107,11 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.4s;
     }
+
     .profile-pic:hover {
       transform: scale(1.05);
     }
+
     .map {
       width: 100%;
       height: 400px;
@@ -96,27 +119,12 @@
       border-radius: 16px;
       margin-top: 20px;
     }
-    .gallery {
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .gallery img {
-      width: 300px;
-      height: auto;
-      border-radius: 16px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.4s;
-      cursor: pointer;
-    }
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
+
     @keyframes fadeIn {
       from { opacity: 0; }
       to { opacity: 1; }
     }
+
     @keyframes slideUp {
       from {
         opacity: 0;
@@ -133,16 +141,21 @@
   <header>
     <h1>Estetic&PMU Klaudia Dutkiewicz</h1>
     <p>Kosmetolog z 8-letnim doświadczeniem</p>
-  </header>  <nav>
+  </header>
+
+  <nav>
     <a href="#o-mnie">O mnie</a>
     <a href="#uslugi">Usługi</a>
-    
     <a href="#kontakt">Kontakt</a>
-  </nav>  <section id="o-mnie">
+  </nav>
+
+  <section id="o-mnie">
     <h2>O mnie</h2>
-    <img src="file-VXtMSxoBkzc53vwdW5BGqC" alt="Klaudia Dutkiewicz" class="profile-pic">
-    <p> Klaudia Dutkiewicz właścicielka salonu Estetic&PMU kosmetologii estetyczneji makijażu permanentnego. Absolwentka Wyższej Szkoły Medycznej z ponad 8 letnim doświadczeniem jako kosmetolog.</p>
-  </section>  <section id="uslugi" class="services">
+    <img src="BackgroundEraser_20250302_163154391.png.jpg" alt="Klaudia Dutkiewicz" class="profile-pic">
+    <p>Klaudia Dutkiewicz – właścicielka salonu Estetic&PMU kosmetologii estetycznej i makijażu permanentnego. Absolwentka Wyższej Szkoły Medycznej z ponad 8-letnim doświadczeniem jako kosmetolog.</p>
+  </section>
+
+  <section id="uslugi" class="services">
     <h2>Zakres usług</h2>
     <ul>
       <li>Peeling kawitacyjny</li>
@@ -160,14 +173,17 @@
       <li>Makijaż permanentny brwi, oczu i ust</li>
       <li>Stylizacja rzęs</li>
     </ul>
-    </div>
-  </section>  <section id="kontakt" class="contact">
+  </section>
+
+  <section id="kontakt" class="contact">
     <h2>Kontakt</h2>
     <p><strong>Adres:</strong> ul. Zdrojowa 33A, 57-350 Kudowa-Zdrój</p>
     <p><strong>Telefon:</strong> <a href="tel:537928999">537 928 999</a></p>
     <p><strong>Email:</strong> <a href="mailto:klaudiadutkiewicz70@gmail.com">klaudiadutkiewicz70@gmail.com</a></p>
     <iframe class="map" src="https://www.google.com/maps?q=Zdrojowa+33A,+57-350+Kudowa-Zdrój&output=embed"></iframe>
-  </section>  <footer>
+  </section>
+
+  <footer>
     <p>&copy; 2025 Estetic&PMU Klaudia Dutkiewicz – Wszystkie prawa zastrzeżone</p>
   </footer>
 </body>
