--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-image: url('https://i.imgur.com/JcNs0Mz.jpg'); /* złoty marmur */
-      background-size: cover;
-      background-attachment: fixed;
-      background-color: #fff;
-      color: #3a3a3a;
+      background-color: #fff; /* Zmieniamy tło na białe */
+      color: #000; /* Zmieniamy kolor tekstu na czarny */
       scroll-behavior: smooth;
     }
 
@@ -31,13 +28,13 @@
     header h1 {
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
-      color: #bfa056;
+      color: #000; /* Kolor nagłówka na czarny */
       margin-bottom: 10px;
       letter-spacing: 1px;
     }
 
     nav {
-      background-color: #bfa056;
+      background-color: #000; /* Czarny pasek nawigacyjny */
       text-align: center;
       padding: 12px 0;
     }
@@ -52,14 +49,14 @@
     }
 
     nav a:hover {
-      color: #333;
+      color: #bfa056; /* Kolor najechania na linki - złoty */
     }
 
     section {
       padding: 60px 20px;
       max-width: 1100px;
       margin: auto;
-      background-color: rgba(255,255,255,0.9);
+      background-color: rgba(255,255,255,0.9); /* Pozostawiamy lekkie przezroczyste tło */
       border-radius: 20px;
       box-shadow: 0 4px 16px rgba(0,0,0,0.05);
       margin-top: 40px;
@@ -67,7 +64,7 @@
     }
 
     h2 {
-      color: #bfa056;
+      color: #000; /* Kolor nagłówków sekcji na czarny */
       margin-bottom: 25px;
     }
 
@@ -91,7 +88,7 @@
     }
 
     footer {
-      background-color: #bfa056;
+      background-color: #000; /* Czarny pasek stopki */
       color: white;
       text-align: center;
       padding: 25px;
