--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Estetic&PMU Klaudia Dutkiewicz</title>
 
-  <!-- Czcionka nagłówka -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+  <!-- Czcionki nagłówka i Open Sans -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #fff; /* Zmieniamy tło na białe */
-      color: #000; /* Zmieniamy kolor tekstu na czarny */
+      background-color: #fff;
+      color: #000;
       scroll-behavior: smooth;
     }
 
@@ -26,15 +26,15 @@
     }
 
     header h1 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Open Sans', sans-serif; /* Zmieniamy czcionkę na Open Sans */
       font-size: 3rem;
-      color: #000; /* Kolor nagłówka na czarny */
+      color: #000;
       margin-bottom: 10px;
       letter-spacing: 1px;
     }
 
     nav {
-      background-color: #000; /* Czarny pasek nawigacyjny */
+      background-color: #000;
       text-align: center;
       padding: 12px 0;
     }
@@ -49,14 +49,14 @@
     }
 
     nav a:hover {
-      color: #bfa056; /* Kolor najechania na linki - złoty */
+      color: #bfa056;
     }
 
     section {
       padding: 60px 20px;
       max-width: 1100px;
       margin: auto;
-      background-color: rgba(255,255,255,0.9); /* Pozostawiamy lekkie przezroczyste tło */
+      background-color: rgba(255,255,255,0.9);
       border-radius: 20px;
       box-shadow: 0 4px 16px rgba(0,0,0,0.05);
       margin-top: 40px;
@@ -64,7 +64,7 @@
     }
 
     h2 {
-      color: #000; /* Kolor nagłówków sekcji na czarny */
+      color: #000;
       margin-bottom: 25px;
     }
 
@@ -88,7 +88,7 @@
     }
 
     footer {
-      background-color: #000; /* Czarny pasek stopki */
+      background-color: #000;
       color: white;
       text-align: center;
       padding: 25px;
@@ -148,7 +148,7 @@
 
   <section id="o-mnie">
     <h2>O mnie</h2>
-    <img src="BackgroundEraser_20250302_163154391.png.jpg" alt="Klaudia Dutkiewicz" class="profile-pic">
+    <img src="BackgroundEraser_20250302_163154391.png" alt="Klaudia Dutkiewicz" class="profile-pic">
     <p>Klaudia Dutkiewicz – właścicielka salonu Estetic&PMU kosmetologii estetycznej i makijażu permanentnego. Absolwentka Wyższej Szkoły Medycznej z ponad 8-letnim doświadczeniem jako kosmetolog.</p>
   </section>
 
