--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     header {
-      background-color: #000;  /* Czarny kolor tła nagłówka */
+      background: linear-gradient(to right, #000, #555);  /* Gradient od czarnego do szarego */
       color: #fff;  /* Biały kolor tekstu */
       text-align: center;
       padding: 40px 20px;
@@ -58,15 +58,28 @@
       color: #bfa056;
     }
 
-    section {
+    /* Zmiana sekcji "O mnie" */
+    #o-mnie {
       padding: 60px 20px;
       max-width: 1100px;
       margin: auto;
-      background-color: rgba(255,255,255,0.9);
+      background-color: #f2f2f2;  /* Jasnoszare tło */
       border-radius: 20px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
       margin-top: 40px;
+      position: relative;
       animation: slideUp 1s ease-in-out;
+    }
+
+    #o-mnie::before {
+      content: "";
+      position: absolute;
+      top: -30px;
+      left: 0;
+      width: 100%;
+      height: 5px;
+      background-color: #f2f2f2;  /* Jasnoszary pasek */
+      border-radius: 10px;
     }
 
     h2 {
