--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 </head>
 <body>
   <header>
-    <h1>Estetic&PMU Klaudia Dutkiewicz</h1>
+    <h1>Estetic&PMU 
+      Klaudia Dutkiewicz</h1>
     <p>Kosmetolog z 8-letnim doświadczeniem</p>
   </header>
 
