--- a/index.html
+++ b/index.html
@@ -206,4 +206,25 @@
   </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8">
+  <title>Zapisz się do newslettera</title>
+</head>
+<body style="text-align: center; font-family: sans-serif; background-color: #f0f0f0; padding: 50px;">
+  
+  <!-- OBRAZEK -->
+  <img src="https://github.com/TwojaNazwa/Repozytorium/blob/main/nazwa_pliku.jpg?raw=true" alt="Newsletter" style="max-width: 100%; height: auto; border-radius: 10px;">
 
+  <h1>Zapisz się do Newslettera</h1>
+  <p>Aby być na bieżąco z nowościami Estetic & PMU</p>
+  
+  <a href="https://preview.mailerlite.io/preview/1495870/sites/153403940686268140/7JiPNU" target="_blank">
+    <button style="background-color: #5A2BAE; color: white; padding: 15px 30px; border: none; border-radius: 5px; font-size: 16px;">
+      ZAPISZ SIĘ
+    </button>
+  </a>
+
+</body>
+</html>
