--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     header {
       background: linear-gradient(to right, #000, #555);  /* Gradient od czarnego do szarego */
-      color: #fff;  /* Biały kolor tekstu */
+      color: #fff;  /* Zielony kolor tekstu */
       text-align: center;
       padding: 40px 20px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
@@ -40,7 +40,7 @@
     }
 
     nav {
-      background-color: #000;
+      background-color: #001;
       text-align: center;
       padding: 12px 0;
     }
