--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 
   <section id="o-mnie">
     <h2>O mnie</h2>
+    <img src="https://dl.dropboxusercontent.com/s/abc123def4567/example-image.png" alt="Klaudia Dutkiewicz" class="profile-pic">
     <img src="https://www.dropbox.com/s/abc123def4567/example-image.png?d1=1" alt="Klaudia Dutkiewicz" class="profile-pic">
     <p>Klaudia Dutkiewicz – właścicielka salonu Estetic&PMU kosmetologii estetycznej i makijażu permanentnego. Absolwentka Wyższej Szkoły Medycznej z ponad 8-letnim doświadczeniem jako kosmetolog.</p>
   </section>
